# test_py

./: .gitignore  checklist.xlsm
angular_tenant/: Dockerfile  README.md  angular.json  nginx-custom.conf  package-lock.json  package.json
angular_tenant/src/: index.html
angular_tenant/src/app/: api.service.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
api-pagination/: create_json.py  data.json  database.db  main.py  model.py  pyproject.toml
django auth/: TODO  docker-compose-dev.yaml  pyproject.toml
django auth/authest/: manage.py
django auth/authest/authest/: asgi.py  auth_backend.py  settings.py  urls.py  wsgi.py
django auth/authest/myapp/: views.py
django auth/authest/myapp/management/commands/: bar.py  foo.py
django auth/authest/myapp/migrations/: 0001_initial.py
django auth/authest/users/: admin.py  models.py  views.py
django auth/authest/users/management/commands/: create_tenant.py
django auth/authest/users/migrations/: 0001_initial.py  0002_client_domain.py
django-angular/backend/: pyproject.toml
django-angular/backend/myproject/myproject/: auth.py  settings.py  token_middleware.py
django-angular/backend/myproject/sample/: models.py  permissions.py  serializer.py  urls.py  views.py
django-angular/backend/myproject/sample/migrations/: 0006_test.py
django-angular/backend_fastapi/: pyproject.toml  run.bat  server.py
django-angular/backend_fastapi/auth/: __init__.py  auth_handler.py  jwt_model.py
django-angular/frontend/: angular.json  package-lock.json  package.json
django-angular/frontend/src/: auth-interceptor.ts  index.html  logging-interceptor.ts  proxy.conf.json
django-angular/frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  datapoint.ts  resize.directive.ts
django-angular/frontend/src/app/authorized-component/: authorized-component.component.html  authorized-component.component.ts
django-angular/frontend/src/app/datapoint/: datapoint.component.html  datapoint.component.scss  datapoint.component.spec.ts  datapoint.component.ts
django-angular/frontend/src/app/home-component/: home-component.component.html  home-component.component.ts
django-angular/frontend/src/app/layout/: layout.component.html  layout.component.scss  layout.component.ts
django-angular/frontend/src/app/pdf-data-viewer/: datapoint.interface.ts  pdf-data-viewer.component.html  pdf-data-viewer.component.scss  pdf-data-viewer.component.spec.ts  pdf-data-viewer.component.ts
django-angular/frontend/src/app/test-angular/: date-format.ts  test-angular.component.html  test-angular.component.scss  test-api.service.ts  (+3 more)
django-oidc/: pyproject.toml  readme
django-oidc/myproject/api/: serializers.py  views.py
django-oidc/myproject/myproject/: settings.py  urls.py
django-oidc/myproject/users/: urls.py
django-oidc/myproject/users/migrations/: 0001_initial.py
django_perm/: pyproject.toml
django_perm/permissions_demo/: manage.py
django_perm/permissions_demo/core/: models.py  permissions.py  serializers.py  urls.py  views.py
django_perm/permissions_demo/core/migrations/: 0001_initial.py  0002_alter_document_options.py
django_perm/permissions_demo/permissions_demo/: asgi.py  settings.py  urls.py  wsgi.py
django_tenant/: cmd  docker-compose.yaml  pyproject.toml
django_tenant/my_project/customer/: middleware.py  models.py
django_tenant/my_project/customer/management/commands/: add_client.py
django_tenant/my_project/customer/migrations/: 0001_initial.py
django_tenant/my_project/my_project/: settings.py  urls.py
django_tenant/my_project/myapp/: admin.py  models.py  serializers.py  urls.py  views.py
django_tenant/my_project/myapp/migrations/: 0001_initial.py
django_testq/: pyproject.toml
django_testq/django_testq/: db.sqlite3  manage.py
django_testq/django_testq/demo/: tasks.py  urls.py  views.py
django_testq/django_testq/django_testq/: asgi.py  settings.py  urls.py  wsgi.py
kafka/: create_certificates.sh  docker-compose.yaml  pyproject.toml
kafka/certs/: broker-ca.crt  broker.csr  ca.crt  ca.keystore.jks  kafka_creds.txt  keystore.jks  truststore.jks
plsql_parser/: antlr_install.py  listener.py  nx.html  pyproject.toml  readme.md  script.py  tree
plsql_parser/v1/: analysis.ipynb  nx.html  result.json  script.py  test.gexf  test.pks
plsql_parser/v2/: module.sql  node.py  readme.md  script.py
plsql_parser/v2/dependancies/: PlSqlLexer.py
plsql_parser/v2/dependancies/.antlr/: PlSqlLexer.java
(+11 files in other folders)
