[tool.poetry]
name = "api-pagination"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "api_pagination"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["uvicorn"], version = "^0.115.0"}
uvicorn = "^0.30.6"
fastapi-pagination = "^0.12.27"
faker = "^30.0.0"
pydantic = "^2.9.2"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
