[tool.poetry]
name = "plsql-parser"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "plsql_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
antlr4-python3-runtime = "^4.13.2"
antlr4-tools = "^0.2.1"
pydantic = "^2.9.2"
ipykernel = "^6.29.5"
networkx = "^3.4.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pyvis = "^0.3.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
